# SentinelX

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.mockclient  Makefile  README.md  docker-compose.enterprise.yml  docker-compose.yml  index.html  mock_client.py  onnxscript-0.7.0-py3-none-any.whl  prometheus.yml  run_integration.py  test_onnx.py
.github/: PULL_REQUEST_TEMPLATE.md
assets/: index-0_v6OZ-R.css  index-B-PI-wzH.js  index-Bx3YDmZg.js  index-CT7xUfV-.js  index-CgBnNUGa.js  index-Ch5ytKrX.js  index-CwPzo79K.css  index-DPfYvK34.js  index-DRWXiqbT.js  index-DobrVp0Y.js
client/: CMakeLists.txt  main.cpp  sentinx_sdk.cpp  sentinx_sdk.h  test_sdk.cpp
dashboard/: package-lock.json  package.json
dashboard-api/: package.json  server.js
data/: sentinelx_dataset.csv
database/: Dockerfile  clickhouse_schema.sql  clickhouse_sink.py
docker/: Dockerfile.mockclient
frontend-analytics/: index.html  package-lock.json  package.json
frontend-dev-console/: package.json
frontend-player-portal/: package-lock.json  package.json
k8s/: README.md  clickhouse.yaml  dashboard.yaml  deploy_local_cluster.sh  edge-ingest.yaml  hpa-rbac.yaml  kafka.yaml  ml-inference.yaml
ml/: Dockerfile  Dockerfile.enterprise  Dockerfile.exporter  export_onnx.py  generate_data.py  inference_engine.py  requirements.txt  train_model.py
models/: behavior_autoencoder_v1.onnx  behavior_autoencoder_v1.onnx.data  behavior_autoencoder_v1.pth  behavior_detection_v1.pth  scaler.pkl
proto/: sentinx.proto
scripts/: chaos_fuzzer.py  mock_client.py
server/: Dockerfile  edge_ingest.go  (+3 more)
(+27 files in other folders)
